[project]
name = "py-git"
version = "0.0.0"
description = "Git command interfaces with default implementation using subprocess calls."
requires-python = ">=3.12"
authors = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
maintainers = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
classifiers = [
  "Development Status :: 1 - Planning",

  "Intended Audience :: Developers",
  "Intended Audience :: Education",

  "Topic :: Education",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",

  "License :: License :: Free For Educational Use",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[dependency-groups]
test = ['pytest', 'coverage']
multitest = ['tox']
doc = ['sphinx', 'sphinx-argparse']
