[project]
name = "gitbolt"
version = "0.0.0"
description = "Git command interfaces for python."
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
maintainers = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
keywords = [
  'git', 'vcs', 'library', 'version control'
]
classifiers = [
  "Development Status :: 1 - Planning",

  "Intended Audience :: Developers",
  "Intended Audience :: Education",

  "Topic :: Education",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",

  "License :: License :: Free For Educational Use",

  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",

  "Typing :: Typed"
]
dependencies = [
  "vt-err-hndlr @ git+https://github.com/Vaastav-Technologies/py-err-hndlr.git"
]

[project.optional-dependencies]
pygit2 = ['pygit2']

[dependency-groups]
dev = ["mypy", "ruff"]
doc = ['sphinx', 'sphinx-argparse']
test = ['pytest', 'coverage']
multitest = ['tox']

[tool.setuptools.packages.find]
where = ['src']
exclude = ["*.py"]
namespaces = true
